# dcap-bonsai-cli

./: .gitignore  Cargo.toml
dcap-bonsai-cli/: .env.example  Cargo.toml  README.md
dcap-bonsai-cli/src/: collaterals.rs  constants.rs  lib.rs  main.rs  parser.rs
dcap-bonsai-cli/src/chain/: attestation.rs  mod.rs  seal.rs
dcap-bonsai-cli/src/code/: guest
dcap-sp1-cli/: Cargo.toml  README.md
dcap-sp1-cli/src/: constants.rs  main.rs
