[workspace]
resolver = "2"
members = [
    "dcap-bonsai-cli",
    "dcap-sp1-cli"
]

[workspace.package]
name = "automata-dcap-zk-cli"
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://ata.network/"
license = "Apache-2.0"

[workspace.dependencies]
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0.82"
x509-parser = "0.15.1"
alloy = { version = "0.1", features = ["full"] }